--- a/presentation/Tinned.html
+++ b/presentation/Tinned.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8">
   <title>Tinned - 3D Protein Viewer</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <!-- Icone -->
+
   <link href="conserve.jpg" rel="icon">
 
-  <!-- Police -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
 
-  <!-- Style -->
+  <link href="https://fonts.googleapis.com/css2?family=Monda:wght@700&display=swap" rel="stylesheet"> 
+
   <link href="Tinned.css" rel="stylesheet">
 
 </head>
@@ -21,7 +20,6 @@
   <div id="h2">
     <div class="logo centered">
     </div>
-    <!--/logo-->
     <div class="container centered">
       <div class="global">
           <h1><b>Tinned</b></h1>
@@ -36,46 +34,37 @@
             <h3><b>Jean-Christophe Taveau</b></h3>
         </div>
       </div>
-      <!--/row-->
     </div>
-    <!--/container-->
   </div>
-  <!--H-->
+  
 
   <div class="container ptb">
     <div class="row">
       <h2 class="centered mb">Description du projet
       </h2>
-      <div class="col-md-4">
-        <h5><b>THE CLIENT</b></h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <div>
+        <h5><b>1</b></h5>
+        <p>Hello</p>
       </div>
-      <!--/col-md-4-->
-      <div class="col-md-4">
-        <h5><b>THE PROPOSAL</b></h5>
-        <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-          desktop publishing software.</p>
+      <div>
+        <h5><b>2</b></h5>
+        <p>yes</p>
       </div>
-      <!--/col-md-4-->
-      <div class="col-md-4">
-        <h5><b>THE RESULTS</b></h5>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <div>
+        <h5><b>3</b></h5>
+        <p>hihi</p>
       </div>
-      <!--/col-md-4-->
     </div>
-    <!--/row-->
   </div>
-  <!-- /.container -->
 
     <div class="row mt">
       <div class="col-md-8 col-md-offset-2">
         <img src="img/screen.png" class="img-responsive aligncenter" alt="">
       </div>
     </div>
-    <!--/.row-->
+
 
   </div>
-  <!--/.container-->
   <div class = "centered" id="h"></div>
 </body>
 </html>
