--- a/presentation/Tinned.html
+++ b/presentation/Tinned.html
@@ -16,13 +16,13 @@
 
 <body>
 
-  <div class = "centered" id="h"><h2>Interface Graphique d'un logiciel de visualisation 3D de proteines</h2></div>
+  <div class = "centered" id="h"><h2>Interface graphique d'un logiciel de visualisation 3D de protéines</h2></div>
   <div id="h2">
     <div class="logo centered">
     </div>
     <div class="container centered">
       <div class="global">
-          <h1><b>Tinned</b></h1>
+          <h1><a href="../examples/search.html"><b>Tinned</b></a></h1>
         <div class="colonne">
             <h1><b>Developpeur</b></h1>
             <h3><b>Quentin Blechet</b></h3>
@@ -43,16 +43,16 @@
       <h2 class="centered mb">Description du projet
       </h2>
       <div>
-        <h5><b>1</b></h5>
-        <p>Hello</p>
+        <h5><b>Qu'est-ce que Tinned ?</b></h5>
+        <p>Tinned est un logiciel de visualisation de protéines en 3D chargé dynamiquement au sein d’une page web.</p>
       </div>
       <div>
-        <h5><b>2</b></h5>
-        <p>yes</p>
+        <h5><b>Utilisation et Fonctionnement</b></h5>
+        <p>Ce logiciel permet à n’importe quel utilisateur de visualiser une protéine à partir d’un fichier PDB et de manipuler cette dernière à l’aide d’un système de nœuds interconnectables afin de modifier graphiquement les éléments sélectionnés et de réaliser sur ces derniers diverses opérations mathématiques.</p>
       </div>
       <div>
-        <h5><b>3</b></h5>
-        <p>hihi</p>
+        <h5><b>Cadre de réalisation</b></h5>
+        <p>Ce logiciel s’inscrit dans le cadre de l’unité d’enseignement Conception d’un Projet de Recherche et Développement et vise à servir de support de travail aux étudiants de deuxième année du Master de Bio-informatique de Bordeaux au cours des travaux de l’unité d’enseignement nommée Biologie Structurale.</p>
       </div>
     </div>
   </div>
