--- a/examples/search.html
+++ b/examples/search.html
@@ -30,9 +30,7 @@
   board.load({nodes:[],edges:[]});
   board.run();
 
-
-  //console.log(board.graph);
-  //board.graph.appendNode("MOL_COLOR");
+  let board_id = document.querySelector("board");
 
   // Create SearchBox
   searchBox(main,components);
