New Mol components

--- a/examples/mol.html
+++ b/examples/mol.html
@@ -36,12 +36,14 @@
     nodes: [
     {
         id: 1,
-        template:"MOL_OPEN",
+        template:"MOL_FETCH",
         data: {
           meta: {
             pos: [97,223],
           },
-          state: {}
+          state: {
+            pdbid: '1zni'
+          }
         }
       },
       {
