--- a/examples/interval.html
+++ b/examples/interval.html
@@ -77,6 +77,16 @@
           },
           state: {}
         }
+      },
+      {
+        id: 6,
+        template:"BASX_MONITOR",
+        data: {
+          meta: {
+            pos: [849,207],
+          },
+          state: {}
+        }
       }
     ],
     edges : [
@@ -91,6 +101,10 @@
       {
         eid: 3,
         sockets: ['dataout@3','datain@5']
+      },
+      {
+        eid: 4,
+        sockets: ['stream@1','datain@6']
       }
     ]
   };
