--- a/examples/mol_fetch.html
+++ b/examples/mol_fetch.html
@@ -40,7 +40,7 @@
             pos: [28,223],
           },
           state: {
-            pdbid: '1zni'
+            pdbid: '1eog'
           }
         }
       },
@@ -137,7 +137,7 @@
       },
       {
         eid: 6,
-        sockets: ['molout@6','datain@10'],
+        sockets: ['aacounts@7','datain@10'],
       }
     ]
   };
