--- a/examples/mol_fetch.html
+++ b/examples/mol_fetch.html
@@ -58,13 +58,12 @@
       },      ,
       {
         id: 4,
-        template:"MOL_GROUPBY",
+        template:"MOL_VIEW3D",
         data: {
           meta: {
-            pos: [733,258],
+            pos: [500,307],
           },
           state: {
-            selector: 3 // By GroupName
           }
         }
       },
@@ -80,14 +79,14 @@
       },
       {
         id: 6,
-        template:"MOL_ID",
+        template:"MOL_RENDERER",
         data: {
           meta: {
-            pos: [425,290],
+            pos: [276,380],
           },
           state: {
-            type: 1, // ATOM
-            name: 'CA'
+            colormode: 4, // CPK
+            rendermode: 2 // Wireframe
           }
         }
       },
@@ -107,7 +106,7 @@
         template:"PLOT_BARCHART",
         data: {
           meta: {
-            pos: [700,155],
+            pos: [944,170],
           },
           state: {
           }
