--- a/examples/connections.html
+++ b/examples/connections.html
@@ -86,7 +86,7 @@
 
 
 board.load(graph);
-board.graph.appendEdge('value@11','yin@15');
+board.graph.appendEdge('value@11','y@15');
 board.run();
 
 
