--- a/examples/maths.html
+++ b/examples/maths.html
@@ -76,7 +76,7 @@
             pos: [939,288],
           },
           state: {
-            op: 1 // Add
+            op: 'Add'
           }
         }
       }
@@ -88,11 +88,11 @@
       },
       {
         eid: 2,
-        sockets: ['value@11','yin@15'],
+        sockets: ['value@11','y@15'],
       },
       {
         eid: 3,
-        sockets: ['value@15','data@5'],
+        sockets: ['value@15','datain@5'],
       }
     ]
   };
