--- a/examples/mol_fetch.html
+++ b/examples/mol_fetch.html
@@ -85,8 +85,8 @@
             pos: [276,380],
           },
           state: {
-            colormode: 4, // CPK
-            rendermode: 2 // Wireframe
+            colormode:'CPK',
+            rendermode: 'Wireframe'
           }
         }
       },
