--- a/examples/range.html
+++ b/examples/range.html
@@ -98,7 +98,7 @@
             pos: [456,210],
           },
           state: {
-            op: 1 // Add
+            op: 'Add'
           }
         }
       },
@@ -122,7 +122,7 @@
             pos: [614,210],
           },
           state: {
-            code: '(x) => Math.floor(x / 2);'
+            code: '(x) => Math.floor(x * 2.5);'
           }
         }
       }
