--- a/examples/search.html
+++ b/examples/search.html
@@ -12,7 +12,7 @@
   'use strict';
 
   import {TINNED} from '../src/tinned.js';
-  import {Board} from '../src/core/board.js';
+  import {Board} from '../src/board.js';
   import {components} from '../components/mol/components.js';
   import {searchBox} from '../src/searchBox.js';
 
