--- a/examples/select.html
+++ b/examples/select.html
@@ -18,7 +18,7 @@
   'use strict';
 
   import {TINNED} from '../src/tinned.js';
-  import {Board} from '../src/core/board.js';
+  import {Board} from '../src/board.js';
   import {components} from '../components/mol/components.js';
 
   ////// MAIN //////
