--- a/board.html
+++ b/board.html
@@ -5,16 +5,16 @@
 <title>TINNED - Search Box</title>
 <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/searchBox.css">
- <link rel="stylesheet" href="../css/tinned.css">
+<link rel="stylesheet" href="./css/searchBox.css">
+ <link rel="stylesheet" href="./css/tinned.css">
  <script type="module">
 
   'use strict';
 
-  import {TINNED} from '../src/tinned.js';
-  import {Board} from '../src/board.js';
-  import {components} from '../components/mol/components.js';
-  import {searchBox} from '../src/searchBox.js';
+  import {TINNED} from './src/tinned.js';
+  import {Board} from './src/board.js';
+  import {components} from './components/mol/components.js';
+  import {searchBox} from './src/searchBox.js';
 
   ////// MAIN //////
 
