--- a/board.html
+++ b/board.html
@@ -5,8 +5,8 @@
 <title>TINNED - Search Box</title>
 <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="./tinned/css/searchBox.css">
- <link rel="stylesheet" href="./tinned/css/tinned.css">
+<link rel="stylesheet" href="./tinned/master/css/searchBox.css">
+ <link rel="stylesheet" href="./tinned/master/css/tinned.css">
  <script type="module">
 
   'use strict';
