--- a/examples/search.html
+++ b/examples/search.html
@@ -4,7 +4,7 @@
 <meta charset="utf8">
 <title>TINNED - Search Box</title>
 <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet"> 
-<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="../css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../css/searchBox.css">
  <link rel="stylesheet" href="../css/tinned.css">
  <script type="module">
@@ -13,7 +13,7 @@
 
   import {TINNED} from '../src/tinned.js';
   import {Board} from '../src/board.js';
-  import {components} from '../components/mol/components.js';
+  import {components} from '../components/basics/components.js';
   import {searchBox} from '../src/searchBox.js';
 
   ////// MAIN //////
